--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -25,6 +25,7 @@
         <ul role="menu" class="sub-menu">
             <li><a ws-is-active-route asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
             <li><a ws-is-active-route asp-controller="AjaxTest" asp-action="Index">AjaxTest</a></li>
+            <li><a ws-is-active-route asp-controller="AjaxTest" asp-action="SignalRTest">SignalRTest</a></li>
         </ul>
     </li>
 </ul>
